day3/good-pod-validate.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: good-pod 
  namespace: default 
  labels: 
    app: hello-node 
    team: devsecops 
spec: 
  containers: 
    - name: hello-node 
      image: registry.k8s.io/e2e-test-images/agnhost:2.53 
      args: ["netexec", "--http-port=8080"]
