day3/good-pod.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: hello-node 
  namespace: demo 
  labels: 
    app: hello-node 
    owner: devsecops-team 
spec: 
  replicas: 1 
  selector: 
    matchLabels: 
      app: hello-node 
  template: 
    metadata: 
      labels: 
        app: hello-node 
        owner: devsecops-team 
    spec: 
      containers: 
        - name: hello-node 
          image: registry.k8s.io/e2e-test-images/agnhost:2.53 
          args: ["netexec", "--http-port=8080"] 
          ports: 
            - containerPort: 8080
