day3/constraint-owner.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1 
kind: K8sRequiredLabels 
metadata: 
  name: ns-owner 
spec: 
  match: 
    namespaces: 
      - demo 
    kinds: 
      - apiGroups: ["apps"] 
        kinds: ["Deployment"] 
  parameters: 
    labels: 
      - owner
