day3/policy-imagepull-always.yaml
apiVersion: kyverno.io/v1 
kind: ClusterPolicy 
metadata: 
  name: always-pull-images 
spec: 
  rules: 
    - name: always-pull-images 
      match: 
        any: 
          - resources: 
              kinds: 
                - Pod 
      mutate: 
        patchStrategicMerge: 
          spec: 
            containers: 
              - (image): "*" 
                imagePullPolicy: Always
