day3/policy-require-labels.yaml
apiVersion: kyverno.io/v1 
kind: ClusterPolicy 
metadata: 
  name: require-labels 
spec: 
  validationFailureAction: Enforce 
  rules: 
    - name: check-team-label 
      match: 
        any: 
          - resources: 
              kinds: 
                - Pod 
      validate: 
        message: "The label 'team' is required." 
        pattern: 
          metadata: 
            labels: 
              team: "?*"
